--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "xmore-1.0.3.tar.bz2": b57b92afd783d28c4c505e0c95556939f24c3ec9
+  xmore-1.0.4.tar.xz: e6b1a8835106ba3be77aa21c81940c2aca545432
